--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="/image/KakaoTalk_20240505_234415546.jpg"
+      href="/image/KakaoTalk_20240505_234415546.jpg" />
     <title>kimnambin Portfolio</title>
   </head>
   <body>
