--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="LBvaD3vIIkubwvmELzQpcGoXgwD5ahOhqMw5Y0AWUz4" />
     <link
       rel="icon"
       type="/image/KakaoTalk_20240505_234415546.jpg"
